--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
     },
     "require-dev": {
         "oneup/flysystem-bundle": "@stable",
-        "knplabs/gaufrette": "0.1.*"
+        "knplabs/gaufrette": "0.1.*",
+        "phpunit/phpunit": "~5.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "Xaben\\MediaBundle\\": ""
+        }
     }
 }
