--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 
 before_script:
   - composer selfupdate
-  - composer global update --prefer-dist --no-interaction
+  - composer update --prefer-dist --no-interaction
   - composer require symfony/symfony:${SYMFONY_VERSION}
 
 script: phpunit --coverage-text
