--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4"
+        "doctrine/doctrine-bundle": "~1.4",
+        "imagine/imagine": "~0.6"
     },
     "require-dev": {
         "oneup/flysystem-bundle": "@stable",
